improvement in code

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
         <section class="add">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-7">
+                    <div class="col-12 col-lg-7 add-order-1">
                         <div class="add-img img1">
                             <div class="add-img-info flex-center">
                                 <img src="images/icons/point-icon.svg" alt="point icon" />
@@ -483,19 +483,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-5 flex-center">
+                    <div class="col-12 col-lg-5 flex-center add-order-2">
                         <div class="add-info">
                             <h4 class="small-title">Super Awesome Add</h4>
                             <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in. Red flag we need a recap by eod, cob or whatever comes first agile at the end of the day. Not enough bandwidth closing these latest prospects is like putting socks on an octopus, yet due diligence</p>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-5 flex-center">
+                    <div class="col-12 col-lg-5 flex-center add-order-3">
                         <div class="add-info text-end">
                             <h4 class="small-title">Super Awesome Add</h4>
                             <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in. Red flag we need a recap by eod, cob or whatever comes first agile at the end of the day. Not enough bandwidth closing these latest prospects is like putting socks on an octopus, yet due diligence</p>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-7">
+                    <div class="col-12 col-lg-7 add-order-4">
                         <div class="add-img img2">
                             <div class="add-img-info flex-center">
                                 <img src="images/icons/point-icon.svg" alt="point icon" />
@@ -503,11 +503,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-7">
+                    <div class="col-12 col-lg-7 add-order-5">
                         <div class="add-img img3">
                         </div>
                     </div>
-                    <div class="col-12 col-lg-5 flex-center">
+                    <div class="col-12 col-lg-5 flex-center add-order-6">
                         <div class="add-info">
                             <h4 class="small-title">Super Awesome Add</h4>
                             <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in. Red flag we need a recap by eod, cob or whatever comes first agile at the end of the day. Not enough bandwidth closing these latest prospects is like putting socks on an octopus, yet due diligence</p>
