--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </form>
                 </div>
 
-                <div class="img-wrapper">
+                <div class="img-wrapper background-img">
                     <div class="wrapper-info flex-center">
                         <div class="info flex-center">
                             <img src="images/icons/call-icon.svg" alt="call icon">
@@ -378,7 +378,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-6">
-                        <div class="service-img"></div>
+                        <div class="service-img background-img"></div>
                     </div>
                     <div class="col-12 col-lg-6">
                         <div class="service-info">
@@ -476,7 +476,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-7 add-order-1">
-                        <div class="add-img img1">
+                        <div class="add-img background-img img1">
                             <div class="add-img-info flex-center">
                                 <img src="images/icons/point-icon.svg" alt="point icon" />
                                 <span>Melbourne,Australia</span>
@@ -496,7 +496,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-7 add-order-4">
-                        <div class="add-img img2">
+                        <div class="add-img background-img img2">
                             <div class="add-img-info flex-center">
                                 <img src="images/icons/point-icon.svg" alt="point icon" />
                                 <span>Melbourne,Australia</span>
@@ -504,7 +504,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-7 add-order-5">
-                        <div class="add-img img3">
+                        <div class="add-img background-img img3">
                         </div>
                     </div>
                     <div class="col-12 col-lg-5 flex-center add-order-6">
